--- a/css/style.css
+++ b/css/style.css
@@ -294,27 +294,78 @@ section{
 	text-align: center;
 }
 
-.team .box-container .box img{
+.team .box-container .card-wrapper{
+	perspective: 1000px;
+}
+
+.team .box-container .card-wrapper .card {
+  cursor: pointer;
+  transition-duration: 0.6s;
+  transition-timing-function: ease-in-out;
+  transform-style: preserve-3d;
+}
+
+.team .box-container .card-wrapper .card .front,
+.team .box-container .card-wrapper .card .back {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  transform: rotateX(0deg);
+}
+
+.team .box-container .card-wrapper .card .front {
+  z-index: 2;
+}
+
+.team .box-container .card .front,
+.team .box-container .card .back {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team .box-container .card .back {
+  background-color: var(--main-color);
+  color: white;
+  transform: rotateY(180deg);
+
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.team .box-container .card .back i:hover{
+	color: var(--main-color);
+	background-color: #fff;
+}
+
+.team .box-container .card-wrapper .card img {
 	width: 100%;
 	object-fit: cover;
 	margin-bottom: .5rem;
-	-webkit-box-reflect: below 2px linear-gradient(transparent, transparent, #0004);
-  
-	-webkit-transform: perspective(800px) rotateY(25deg);
-			transform: translateZ(90);
-			transform-origin: center;
-	transition:all 0.3s;
 }
 
-.team .box-container:hover .box img{
-	opacity:0.3;
-	-webkit-transform: translateZ(90);
+.team .box-container .card-wrapper .card .back .social-icons i{
+	margin: auto;
+	padding: 5px 5px;
+	border-radius: 4px;
+	line-height: 20px;
 }
 
-.team .box-container .box img:hover{
-	opacity:1;
-	-webkit-transform: perspective(800px) rotateY(0deg);
-			transform: translateZ(0);
+.team .box-container .card-wrapper .card .back .social-icons p{
+	font-size: 2rem;
+	text-align: center;
+}
+
+.team .box-container .card-wrapper .card .back {
+  transform: rotateX(180deg);
+}
+.team .box-container .card-wrapper:hover .card {
+  transform: rotateX(180deg);
 }
 
 .team .box-container .box h3{
